--- a/app/Components/CalculatorSection/CardComponent/CardComponent.module.scss
+++ b/app/Components/CalculatorSection/CardComponent/CardComponent.module.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   justify-content: space-between;
   width: 100%;
+  box-sizing: border-box;
   height: 200px;
   padding: 20px;
   background-color: var(--color-bg);
@@ -65,6 +66,8 @@
   line-clamp: 2;
   overflow: hidden;
   text-overflow: ellipsis;
+  overflow-wrap: anywhere;
+  word-break: break-word;
 }
 
 .subTitle {
@@ -81,6 +84,8 @@
   line-clamp: 2;
   overflow: hidden;
   text-overflow: ellipsis;
+  overflow-wrap: anywhere;
+  word-break: break-word;
 }
 
 .highlight {
